--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,11 @@ src/*.o
 src/**/*.o
 src/**/**/*.o
 tests/*_tests
+tests/**/*_tests
 tests/*.o
+tests/**/*.o
 tmp
 .DS_Store
 **/*.dSYM*
+**/**/*.dSYM*
 valgrind.log
