--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,6 @@ tmp
 valgrind.log
 bin/callgrind.out
 bin/cachegrind.out
-deps/leveldb-1.7.0/**
-deps/LuaJIT-2.0.0/**
+deps/**/**
 Vagrantfile
 .vagrant
