Fix multicore query bug.

--- a/deps/csky/Makefile
+++ b/deps/csky/Makefile
@@ -57,7 +57,7 @@ install: build
 
 
 clean: 
-	rm -rf bin ${OBJECTS} ${TEST_OBJECTS}
+	rm -rf bin ${OBJECTS} ${TEST_OBJECTS} tmp
 	rm -rf tests/*.dSYM tests/**/*.dSYM
 	rm -rf tests/*.o tests/**/*.o
 	rm -rf libcsky.*
