--- a/query/Makefile
+++ b/query/Makefile
@@ -4,7 +4,8 @@ test: all
 	go test -v
 
 lexer.go: lexer.l
-	golex -t $< | gofmt > $@
+	golex -t $< > $@
+	go fmt
 
 parser.go: parser.y
 	go tool yacc -o $@ $<
