Add StatementParser and ExpressionParser.

--- a/query/Makefile
+++ b/query/Makefile
@@ -1,4 +1,4 @@
-all: lexer.go parser.go
+all: lexer.go grammar.go
 
 test: all
 	go test -v
@@ -7,6 +7,6 @@ lexer.go: lexer.l
 	golex -t $< > $@
 	go fmt
 
-parser.go: parser.y
+grammar.go: grammar.y
 	go tool yacc -o $@ $<
 	go fmt
